ui/apps/io.ox/core/viewer/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2014 Open-Xchange Inc., Tarrytown, NY, USA. info@open-xchange.com
 *
 * @author Mario Schroeder <mario.schroeder@open-xchange.com>
 * @author Edy Haryono <edy.haryono@open-xchange.com>
 */

@viewer-text-color: #ffffff;
@viewer-background-color: rgba(0, 0, 0, 0.85);

@viewer-toolbar-height: 45px;
@viewer-toolbar-bgcolor: #000000;
@viewer-toolbar-filename-width: 400px;
@viewer-toolbar-hover-bgcolor: #333333;
@viewer-toolbar-focus-bgcolor: #222222;
@viewer-toolbar-active-bgcolor: #222222;
@viewer-toolbar-link-width: 60px;

@viewer-sidebar-bgcolor: #202020;
@viewer-sidebar-width: 400px;
@viewer-sidebar-active-bgcolor: #333333;

.io-ox-viewer {

    background-color: @viewer-background-color;
    z-index: 11; // just to one more than #io-ox-screens
    color: @viewer-text-color;

    ::-webkit-scrollbar {
        width: 12px;
    }
    ::-webkit-scrollbar-button {
        width: 12px;
        height:5px;
    }
    ::-webkit-scrollbar-track {
        background: #999;
    }
    ::-webkit-scrollbar-thumb {
        background: #666;
        border: thin solid #555;
    }
    ::-webkit-scrollbar-thumb:hover {
        background: #555;
    }

    .viewer-toolbar {
        position: absolute;
        top: 0;
        width: 100%;
        height: @viewer-toolbar-height;
        line-height: @viewer-toolbar-height;
        background: @viewer-toolbar-bgcolor;
        box-shadow: 0px 2px 2px #000000;
        list-style: none;
        padding-left: 0;
        text-align: right;
        > li {
            display: inline-block;
            min-width: @viewer-toolbar-link-width;
            height: @viewer-toolbar-height;
            text-align: center;
            > a {
                display: inline-block;
                height: @viewer-toolbar-height;
                min-width: @viewer-toolbar-link-width;
                outline: none;
                text-decoration: none;
                color: #999999;
                border-right: 1px solid #000000;
                &:hover {
                    color: #ffffff;
                    background-color: @viewer-toolbar-hover-bgcolor;
                }
                &:focus,
                &:active {
                    color: #ffffff;
                    background-color: @viewer-toolbar-focus-bgcolor;
                }
            }
            > a.viewer-toolbar-filename {
                max-width: @viewer-toolbar-filename-width;
                padding: 0 20px;
                text-align: left;
                cursor: default;
                .ellipsis();
                i {
                    margin-right: 10px;
                    font-size: 16px;
                };
                i.fa-file-excel-o { color: #44B957; }
                i.fa-file-word-o { color: #1A9DD4; }
                i.fa-file-powerpoint-o { color: #EE5F37; }
                i.fa-file-pdf-o { color: #CF1E28; }
                i.fa-file-image-o { color: #EE5F37; }
                &:hover, &:active, &:focus {
                    background: @viewer-toolbar-bgcolor;
                    color: #999999;
                }
            }
            > a.viewer-toolbar-rename {
                &:hover {
                    background: @viewer-toolbar-hover-bgcolor;
                    cursor: pointer;
                }
                &:focus {
                    background-color: @viewer-toolbar-active-bgcolor ;
                }
            }
            > a.active { background-color: @viewer-toolbar-active-bgcolor ; }
            &.dropdown.open { background-color: @viewer-toolbar-active-bgcolor; }
            .dropdown-menu { margin: 0; }
        }
    }

    .viewer-displayer {
        position: absolute;
        top: @viewer-toolbar-height;
        width: 100%;
        bottom: 0;

        #viewer-carousel,
        .carousel-inner,
        .item {
            height: 100%;
        }

        .item {
            position:relative;
            outline: none;
            .viewer-displayer-image {
                position: absolute;
                top: 0;
                left: 0;
                bottom: 0;
                right: 0;
                margin: auto;
                display: none;
            }
            .viewer-displayer-caption {
                position: absolute;
                left: 0;
                right: 0;
                margin: auto;
                bottom: 40px;
                height: 2rem;
                line-height: 2rem;
                width: 100px;
                text-align: center;
                background: rgba(0,0,0,0.5);
                .border-radius(4px);
                display: none;
            }
            &.io-ox-busy::before { color: rgba(255, 255, 255, 0.3); }
        }

        .carousel-control {
            color: #777777;
            background: none;
            i {
                position: absolute;
                top: 50%;
                font-size: 3rem;
                transform: translateY(-50%);
            }
            &.left i { left: 20px; }
            &.right i { right: 20px; }
            &:hover,
            &:focus {
                color: #FFFFFF;
            }
        }

        .viewer-displayer-notification {
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;
            right: 0;
            margin: auto;
            height: 1em;
            text-align: center;
        }
    }

    .viewer-sidebar {
        position: absolute;
        top: 45px;
        right: 0;
        bottom: 0;
        width: @viewer-sidebar-width;
        padding: 1rem;
        background: @viewer-sidebar-bgcolor;
        display: none;
        box-shadow: inset 0px 2px 2px 0px #000000;
        overflow-y: auto;
        &.opened {
            display: block;
        }
    }

    .viewer-fileinfo,
    .viewer-filedescription,
    .viewer-fileversions {

        .panel {
            background-color: transparent;
            border-color: transparent;

            a { outline: none; }

            .panel-heading {
                color: #999999;
                border-color: #999999;
                background-color: transparent;
                position: relative;

                .panel-heading-button {
                    color: @viewer-text-color;
                    position: absolute;
                    top: 4px;
                    right: 10px;
                    width: 40px;
                    &:active, &:focus, &:hover {
                        background-color: @viewer-sidebar-active-bgcolor
                    }
                }

                h3 {
                    font-weight: bold;
                }
            }

            .panel-body {

                dt {
                    color: #999999;
                }

                dd {
                    .user-select(text);
                }

                .versiontable {
                    white-space:nowrap;

                    .versionLabel {
                       max-width: 32px;
                       overflow: hidden;
                    }

                    .current-version {
                        color: lightgreen;
                    }

                    td {
                        padding: 4px;
                        border-top: none;
                    }

                    .dropdown > a {
                        color: #00BBFF;
                        &:hover {
                            color: #008aca;
                        }
                        &:active, &:focus{
                            background-color: #444444;
                        }
                    }

                }

                .description {
                    &.description-text {
                        color: @viewer-text-color;
                        background-color: transparent;
                        display: none;
                        width: 100%;

                        &.editmode {
                            display: block;
                        }
                    }
                    &.description-label {
                        display: block;
                        white-space: pre-wrap;
                        padding: 3px;
                        border: 2px solid transparent;
                        .border-radius(4px);
                        outline: none;
                        .user-select(text);

                        &:active, &:focus{
                            border-color: #444444;
                        }

                        &.editmode {
                            display: none;
                        }
                    }
                }
            }
        }
    }
}

